Make the makefile a little more readable

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,4 @@
+# The Gibson - A Makefile
 #
 # 'make'        build executable file 'gibson'
 # 'make clean'  removes all .o and executable files
@@ -9,7 +10,11 @@ CC=g++
 #   -g    adds debugging information to the executable file
 #  -Wall turns on most, but not all, compiler warnings
 CFLAGS=-g -Wall
-INCLUDE_DIRS=/usr/local/include include /usr/local/Cellar/irrlicht/1.8.1/include/irrlicht/
+
+INCLUDE_DIRS=\
+	include \
+	/usr/local/include \
+	/usr/local/Cellar/irrlicht/1.8.1/include/irrlicht/  # You might have to adjust this for your machine
 INCLUDES=$(foreach d, $(INCLUDE_DIRS), -I$d)
 
 # define any libraries to link into executable:
@@ -17,12 +22,45 @@ INCLUDES=$(foreach d, $(INCLUDE_DIRS), -I$d)
 #   option, something like (this will link in libmylib.so and libm.so:
 LIB_FILES=/usr/local/Cellar/irrlicht/1.8.1/lib/libIrrlicht.a
 LIB_PATHS=/usr/local/lib
-LIBS=$(foreach f, $(LIB_FILES), $f) $(foreach d, $(LIB_PATHS), -L$d)
+LIB_NAMES=\
+	glfw3 \
+	glew
+LIBS=\
+	$(foreach f, $(LIB_FILES), $f) \
+	$(foreach d, $(LIB_PATHS), -L$d) \
+	$(foreach n, $(LIB_NAMES), -l$n)
 
-LFLAGS=-framework OpenGL -framework Cocoa -framework IOKit -lglfw3 -lglew
+
+# define any frameworks we'll be using
+FRAMEWORK_NAMES=\
+	OpenGL \
+	Cocoa \
+	IOKit
+LFLAGS=$(foreach n, $(FRAMEWORK_NAMES), -framework $n)
 
 # define the c source files
-SRCS=main.cpp PathCreator.cpp pulse.cpp room.cpp cam.cpp include/gui.cpp include/camera.cpp include/HardwareSkinCallback.cpp include/events.cpp include/globals.cpp include/lighting.cpp include/mesh.cpp include/ray3d.cpp include/render.cpp include/Effects/CEffectPostProc.cpp include/Effects/CLensFlarePostProc.cpp include/Effects/CRendererPostProc.cpp include/Effects/CSplitPostProc.cpp include/Effects/CTransitionPostProc.cpp include/Effects/CWaterPostProc.cpp include/Effects/IPostProc.cpp
+SRCS=\
+	main.cpp \
+	PathCreator.cpp \
+	pulse.cpp \
+	room.cpp \
+	cam.cpp \
+	include/gui.cpp \
+	include/camera.cpp \
+	include/HardwareSkinCallback.cpp \
+	include/events.cpp \
+	include/globals.cpp \
+	include/lighting.cpp \
+	include/mesh.cpp \
+	include/ray3d.cpp \
+	include/render.cpp \
+	include/Effects/CEffectPostProc.cpp \
+	include/Effects/CLensFlarePostProc.cpp \
+	include/Effects/CRendererPostProc.cpp \
+	include/Effects/CSplitPostProc.cpp \
+	include/Effects/CTransitionPostProc.cpp \
+	include/Effects/CWaterPostProc.cpp \
+	include/Effects/IPostProc.cpp
 
 # define the C object files 
 #
@@ -50,5 +88,5 @@ $(MAIN): $(OBJS)
 	$(CC) $(CFLAGS) $(INCLUDES) $(LFLAGS) $(LIBS) -c $<  -o $@
 
 clean:
-	rm *.o ~* $(MAIN)
+	rm *.o $(MAIN)
 	rm include/*.o
