--- a/src/Makefile
+++ b/src/Makefile
@@ -85,7 +85,7 @@ $(MAIN): $(OBJS)
 # the rule(a .cpp file) and $@: the name of the target of the rule (a .o file) 
 # (see the gnu make manual section about automatic variables)
 .cpp.o:
-	$(CC) $(CFLAGS) $(INCLUDES) $(LFLAGS) $(LIBS) -c $<  -o $@
+	$(CC) $(CFLAGS) $(INCLUDES) -c $<  -o $@
 
 clean:
 	rm *.o $(MAIN)
